--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             <div class="container">
                 <div class="nav-wrapper">
                     <div class="logo">
-                        <a href="index.html">
+                        <a href="\">
                             <i class="fas fa-gem"></i>
-                            <span>RUBY GROUP</span>
+                            <span>RBY GROUP</span>
                         </a>
                     </div>
                     <ul class="nav-menu" id="navMenu">
-                        <li><a href="index.html" class="active">Trang Chủ</a></li>
-                        <li><a href="son.html">Bán Sơn</a></li>
+                        <li><a href="\" class="active">Trang Chủ</a></li>
+                        <li><a href="son.html">Sơn Nhà </a></li>
                         <li><a href="tham-my.html">Thẩm Mỹ Viện</a></li>
                         <li><a href="thiet-ke.html">Tư Vấn Thiết Kế</a></li>
                         <li><a href="contact.html">Liên Hệ</a></li>
@@ -43,7 +43,7 @@
         <div class="slider-container">
             <div class="slide active" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.pexels.com/photos/1643383/pexels-photo-1643383.jpeg?auto=compress&cs=tinysrgb&w=1920&h=1080&fit=crop') center/cover;">
                 <div class="slide-content">
-                    <h2>Chào Mừng Đến Với Ruby Group</h2>
+                    <h2>Chào Mừng Đến Với Rby Group</h2>
                     <p>Đối Tác Tin Cậy Cho Mọi Nhu Cầu Của Bạn</p>
                     <a href="contact.html" class="btn-primary">Khám Phá Ngay</a>
                 </div>
@@ -51,7 +51,7 @@
             <div class="slide" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.pexels.com/photos/1090638/pexels-photo-1090638.jpeg?auto=compress&cs=tinysrgb&w=1920') center/cover;">
                 <div class="slide-content">
                     <h2>Chất Lượng Là Ưu Tiên Hàng Đầu</h2>
-                    <p>20+ Năm Kinh Nghiệm Trong Ngành</p>
+                    <p>10+ Năm Kinh Nghiệm Trong Ngành</p>
                     <a href="contact.html" class="btn-primary">Tìm Hiểu Thêm</a>
                 </div>
             </div>
@@ -72,7 +72,7 @@
     <section class="about" id="about">
         <div class="container">
             <div class="section-header">
-                <h1>Về Ruby Group</h1>
+                <h1>Công ty TNHH đầu tư thương mại & phát triển RBY GROUP</h1>
                 <div class="divider"></div>
                 <p>Hành Trình Phát Triển Và Cam Kết Của Chúng Tôi</p>
             </div>
@@ -82,12 +82,12 @@
                 </div>
                 <div class="about-text">
                     <h3>Tập Đoàn Đa Ngành Uy Tín</h3>
-                    <p>Ruby Group được thành lập từ năm 2003, với hơn 20 năm kinh nghiệm trong nhiều lĩnh vực kinh doanh và dịch vụ. Chúng tôi tự hào là một trong những tập đoàn đa ngành hàng đầu tại Việt Nam, luôn đặt chất lượng và sự hài lòng của khách hàng lên hàng đầu.</p>
-                    <p>Với đội ngũ chuyên gia giàu kinh nghiệm, cơ sở vật chất hiện đại và quy trình làm việc chuyên nghiệp, Ruby Group cam kết mang đến những sản phẩm và dịch vụ tốt nhất cho khách hàng trên khắp cả nước.</p>
+                    <p>Rby Group được thành lập từ năm 2015, với hơn 10 năm kinh nghiệm trong nhiều lĩnh vực kinh doanh và dịch vụ. Chúng tôi tự hào là một trong những tập đoàn đa ngành hàng đầu tại Việt Nam, luôn đặt chất lượng và sự hài lòng của khách hàng lên hàng đầu.</p>
+                    <p>Với đội ngũ chuyên gia giàu kinh nghiệm, cơ sở vật chất hiện đại và quy trình làm việc chuyên nghiệp, Rby Group cam kết mang đến những sản phẩm và dịch vụ tốt nhất cho khách hàng trên khắp cả nước.</p>
                     <div class="about-stats">
                         <div class="stat-item">
                             <i class="fas fa-award"></i>
-                            <h4>20+</h4>
+                            <h4>10+</h4>
                             <p>Năm Kinh Nghiệm</p>
                         </div>
                         <div class="stat-item">
@@ -110,7 +110,7 @@
     <section class="why-choose">
         <div class="container">
             <div class="section-header">
-                <h2>Tại Sao Chọn Ruby Group?</h2>
+                <h2>Tại Sao Chọn RBY Group?</h2>
                 <div class="divider"></div>
                 <p>Những Giá Trị Cốt Lõi Tạo Nên Sự Khác Biệt</p>
             </div>
@@ -120,7 +120,7 @@
                         <i class="fas fa-medal"></i>
                     </div>
                     <h3>Uy Tín Lâu Năm</h3>
-                    <p>Hơn 20 năm xây dựng và phát triển, Ruby Group đã khẳng định được vị thế vững chắc trên thị trường với uy tín được khách hàng tin tưởng tuyệt đối.</p>
+                    <p>Hơn 10 năm xây dựng và phát triển, Rby Group đã khẳng định được vị thế vững chắc trên thị trường với uy tín được khách hàng tin tưởng tuyệt đối.</p>
                 </div>
                 <div class="reason-card">
                     <div class="reason-icon">
@@ -167,7 +167,7 @@
             <div class="section-header">
                 <h2>Lĩnh Vực Hoạt Động</h2>
                 <div class="divider"></div>
-                <p>Các Dịch Vụ Chuyên Nghiệp Của Ruby Group</p>
+                <p>Các Dịch Vụ Chuyên Nghiệp Của RBY Group</p>
             </div>
             <div class="services-grid">
                 <!-- Service 1: Bán Sơn -->
@@ -208,7 +208,7 @@
                         <div class="service-icon">
                             <i class="fas fa-spa"></i>
                         </div>
-                        <h3>Thẩm Mỹ Viện Ruby</h3>
+                        <h3>Thẩm Mỹ Viện Rby</h3>
                         <p>Hệ thống thẩm mỹ viện đẳng cấp 5 sao với công nghệ hiện đại, đội ngũ bác sĩ giàu kinh nghiệm. Chuyên các dịch vụ chăm sóc da, điều trị thẩm mỹ, spa cao cấp.</p>
                         <ul class="service-features">
                             <li><i class="fas fa-check-circle"></i> Chăm sóc da mặt chuyên sâu - công nghệ Hàn Quốc</li>
@@ -257,7 +257,7 @@
             <div class="section-header">
                 <h2>Liên Hệ Với Chúng Tôi</h2>
                 <div class="divider"></div>
-                <p>Hãy Để Ruby Group Đồng Hành Cùng Bạn</p>
+                <p>Hãy Để Rby Group Đồng Hành Cùng Bạn</p>
             </div>
             <div class="contact-wrapper">
                 <div class="contact-info">
@@ -265,21 +265,21 @@
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <h4>Địa Chỉ</h4>
-                            <p>123 Đường Nguyễn Huệ, Quận 1, TP. Hồ Chí Minh</p>
+                            <p>Thôn Kim Sơn, xã Đông Tiến, huyện Đông Sơn, tỉnh Thanh Hóa</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
                         <div>
                             <h4>Điện Thoại</h4>
-                            <p>1900 xxxx - 0123 456 789</p>
+                            <p>0877.15.86.86 - 0946.565.893</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h4>Email</h4>
-                            <p>info@rubygroup.vn</p>
+                            <p>Sonnanorby.rbygroup@gmail.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -290,13 +290,7 @@
                         </div>
                     </div>
                 </div>
-                <form class="contact-form" id="contactForm">
-                    <input type="text" placeholder="Họ và Tên *" required>
-                    <input type="email" placeholder="Email *" required>
-                    <input type="tel" placeholder="Số Điện Thoại *" required>
-                    <textarea placeholder="Nội dung tin nhắn *" rows="5" required></textarea>
-                    <button type="submit" class="btn-primary">Gửi Tin Nhắn</button>
-                </form>
+                <img src="./anh/backgroud.jpg" class="lienhe" alt="">
             </div>
         </div>
     </section>
@@ -307,22 +301,22 @@
       <div class="footer-content">
         
         <div class="footer-section">
-          <h3>Tập Đoàn Ruby Group</h3>
-          <p>Ruby Group – Tập đoàn đa lĩnh vực hàng đầu Việt Nam, chuyên cung cấp sơn cao cấp, dịch vụ tư vấn – thiết kế nội ngoại thất và hệ thống thẩm mỹ viện công nghệ cao.</p>
+          <h3>Tập Đoàn Rby Group</h3>
+          <p>Rby Group – Tập đoàn đa lĩnh vực hàng đầu Việt Nam, chuyên cung cấp sơn cao cấp, dịch vụ tư vấn – thiết kế nội ngoại thất và hệ thống thẩm mỹ viện công nghệ cao.</p>
           <div class="social-links">
             <a href="https://www.facebook.com/profile.php?id=100063476167758"><i class="fab fa-facebook"></i></a>
             <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
             <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
-            <a href="https://zalo.me/0815023789"><i class="fas fa-comment-dots"></i></a>
+            <a href="https://zalo.me/0977912846"><i class="fas fa-comment-dots"></i></a>
           </div>
         </div>
   
         <div class="footer-section">
           <h3>Liên Hệ</h3>
           <div class="contact-info">
-            <p><i class="fas fa-map-marker-alt"></i> Trụ sở chính: Số 68 Nguyễn Trãi, Quận Thanh Xuân, Hà Nội, Việt Nam</p>
-            <p><i class="fas fa-phone"></i> <a href="tel:0815023789">0815.023.789</a></p>
-            <p><i class="fas fa-envelope"></i> tapdoanrubygroup@gmail.com</p>
+            <p><i class="fas fa-map-marker-alt"></i> Trụ sở chính: Thôn Kim Sơn, xã Đông Tiến, huyện Đông Sơn, tỉnh Thanh Hóa</p>
+            <p><i class="fas fa-phone"></i> <a href="tel:0977912846">0877.15.86.86 - 0946.565.893</a></p>
+            <p><i class="fas fa-envelope"></i> Sonnanorby.rbygroup@gmail.com</p>
             <p><i class="fas fa-clock"></i> 8:00 - 20:00 (Thứ 2 - Chủ nhật)</p>
           </div>
         </div>
@@ -330,11 +324,11 @@
         <div class="footer-section">
           <h3>Dịch Vụ Chính</h3>
           <ul>
-            <li><a href="son.html">Phân Phối Sơn Ruby Premium</a></li>
-            <li><a href="tu-van.html">Tư Vấn & Thiết Kế Nội Thất</a></li>
-            <li><a href="tham-my.html">Thẩm Mỹ Viện Ruby Group</a></li>
-            <li><a href="dao-tao.html">Đào Tạo & Hợp Tác Đại Lý</a></li>
-            <li><a href="lien-he.html">Hỗ Trợ Khách Hàng</a></li>
+            <li><a href="son.html">Phân Phối Sơn Rby Premium</a></li>
+            <li><a href="thiet-ke.html">Tư Vấn & Thiết Kế Nội Thất</a></li>
+            <li><a href="tham-my.html">Thẩm Mỹ Viện Rby Group</a></li>
+            <li><a href="contact.html">Đào Tạo & Hợp Tác Đại Lý</a></li>
+            <li><a href="contact.html">Hỗ Trợ Khách Hàng</a></li>
           </ul>
         </div>
   
@@ -355,13 +349,13 @@
             <li><a href="contact.html">Chi Nhánh Hà Nội</a></li>
             <li><a href="contact.html">Chi Nhánh TP. Hồ Chí Minh</a></li>
             <li><a href="contact.html">Chi Nhánh Thanh Hóa</a></li>
-            <li><a href="contact.html">Chi Nhánh Nghệ An</a></li>
+            
           </ul>
         </div>
       </div>
   
       <div class="footer-bottom">
-        <p>&copy; 2025 Tập Đoàn Ruby Group. Tất cả quyền được bảo lưu.</p>
+        <p>&copy; 2025 Tập Đoàn Rby Group. Tất cả quyền được bảo lưu.</p>
       </div>
     </div>
   </footer>
