--- a/thiet-ke.html
+++ b/thiet-ke.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Ruby Group - Tư vấn và thiết kế nội thất trọn gói. Đội ngũ kiến trúc sư chuyên nghiệp, thiết kế nhà ở, văn phòng, showroom hiện đại, sang trọng.">
+    <meta name="description" content="Rby Group - Tư vấn và thiết kế nội thất trọn gói. Đội ngũ kiến trúc sư chuyên nghiệp, thiết kế nhà ở, văn phòng, showroom hiện đại, sang trọng.">
     <meta name="keywords" content="thiết kế nội thất, tư vấn thiết kế, thiết kế nhà ở, thiết kế văn phòng, Ruby Group">
-    <title>Tư Vấn & Thiết Kế Nội Thất | Ruby Group</title>
+    <title>Tư Vấn & Thiết Kế Nội Thất | Rby Group</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -16,16 +16,16 @@
             <div class="container">
                 <div class="nav-wrapper">
                     <div class="logo">
-                        <a href="index.html">
+                        <a href="\">
                             <i class="fas fa-gem"></i>
-                            <span>RUBY GROUP</span>
+                            <span>RBY GROUP</span>
                         </a>
                     </div>
                     <ul class="nav-menu" id="navMenu">
-                        <li><a href="index.html">Trang Chủ</a></li>
-                        <li><a href="son.html">Bán Sơn</a></li>
+                        <li><a href="\" class="active">Trang Chủ</a></li>
+                        <li><a href="son.html">Sơn Nhà </a></li>
                         <li><a href="tham-my.html">Thẩm Mỹ Viện</a></li>
-                        <li><a href="thiet-ke.html" class="active">Tư Vấn Thiết Kế</a></li>
+                        <li><a href="thiet-ke.html">Tư Vấn Thiết Kế</a></li>
                         <li><a href="contact.html">Liên Hệ</a></li>
                     </ul>
                     <div class="hamburger" id="hamburger">
@@ -38,12 +38,12 @@
         </nav>
     </header>
 
-    <!-- Hero Slider -->
-    <section class="hero-slider">
+     <!-- Hero Slider -->
+     <section class="hero-slider">
         <div class="slider-container">
             <div class="slide active" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.pexels.com/photos/1643383/pexels-photo-1643383.jpeg?auto=compress&cs=tinysrgb&w=1920&h=1080&fit=crop') center/cover;">
                 <div class="slide-content">
-                    <h2>Chào Mừng Đến Với Ruby Group</h2>
+                    <h2>Chào Mừng Đến Với Rby Group</h2>
                     <p>Đối Tác Tin Cậy Cho Mọi Nhu Cầu Của Bạn</p>
                     <a href="contact.html" class="btn-primary">Khám Phá Ngay</a>
                 </div>
@@ -51,7 +51,7 @@
             <div class="slide" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.pexels.com/photos/1090638/pexels-photo-1090638.jpeg?auto=compress&cs=tinysrgb&w=1920') center/cover;">
                 <div class="slide-content">
                     <h2>Chất Lượng Là Ưu Tiên Hàng Đầu</h2>
-                    <p>20+ Năm Kinh Nghiệm Trong Ngành</p>
+                    <p>10+ Năm Kinh Nghiệm Trong Ngành</p>
                     <a href="contact.html" class="btn-primary">Tìm Hiểu Thêm</a>
                 </div>
             </div>
@@ -72,7 +72,7 @@
 <section class="about" id="about">
     <div class="container">
         <div class="section-header">
-            <h2>Dịch Vụ Tư Vấn Thiết Kế Ruby Group</h2>
+            <h2>Dịch Vụ Tư Vấn Thiết Kế Rby Group</h2>
             <div class="divider"></div>
             <p>Kiến Tạo Không Gian Sống Đẳng Cấp – Tinh Tế Từng Chi Tiết</p>
         </div>
@@ -82,9 +82,9 @@
             </div>
             <div class="about-text">
                 <h3>Chuyên Gia Hàng Đầu Trong Lĩnh Vực Thiết Kế Kiến Trúc & Nội Thất</h3>
-                <p><strong>Ruby Group</strong> tự hào là đơn vị tiên phong trong lĩnh vực <strong>tư vấn thiết kế kiến trúc, nội thất và cảnh quan</strong> tại Việt Nam. Với triết lý “Sáng tạo từ trái tim – Chất lượng từ từng chi tiết”, chúng tôi mang đến cho khách hàng những không gian sống và làm việc hoàn hảo, kết hợp hài hòa giữa thẩm mỹ, công năng và phong thủy.</p>
-                <p>Đội ngũ kiến trúc sư và nhà thiết kế của Ruby Group sở hữu nhiều năm kinh nghiệm trong việc thực hiện hàng trăm công trình lớn nhỏ – từ biệt thự cao cấp, nhà phố, căn hộ, đến văn phòng và khu nghỉ dưỡng cao cấp. Mỗi dự án đều được chăm chút tỉ mỉ để phản ánh phong cách và cá tính riêng của từng khách hàng.</p>
-                <p>Chúng tôi cung cấp các gói dịch vụ: <strong>Tư vấn thiết kế kiến trúc, thiết kế nội thất, cải tạo không gian, thiết kế 3D và thi công trọn gói</strong>. Ruby Group luôn đồng hành cùng bạn từ ý tưởng đến khi hoàn thiện, cam kết đem đến không gian sống hoàn hảo và bền vững theo thời gian.</p>
+                <p><strong>Rby Group</strong> tự hào là đơn vị tiên phong trong lĩnh vực <strong>tư vấn thiết kế kiến trúc, nội thất và cảnh quan</strong> tại Việt Nam. Với triết lý “Sáng tạo từ trái tim – Chất lượng từ từng chi tiết”, chúng tôi mang đến cho khách hàng những không gian sống và làm việc hoàn hảo, kết hợp hài hòa giữa thẩm mỹ, công năng và phong thủy.</p>
+                <p>Đội ngũ kiến trúc sư và nhà thiết kế của Rby Group sở hữu nhiều năm kinh nghiệm trong việc thực hiện hàng trăm công trình lớn nhỏ – từ biệt thự cao cấp, nhà phố, căn hộ, đến văn phòng và khu nghỉ dưỡng cao cấp. Mỗi dự án đều được chăm chút tỉ mỉ để phản ánh phong cách và cá tính riêng của từng khách hàng.</p>
+                <p>Chúng tôi cung cấp các gói dịch vụ: <strong>Tư vấn thiết kế kiến trúc, thiết kế nội thất, cải tạo không gian, thiết kế 3D và thi công trọn gói</strong>. Rby Group luôn đồng hành cùng bạn từ ý tưởng đến khi hoàn thiện, cam kết đem đến không gian sống hoàn hảo và bền vững theo thời gian.</p>
                 <div class="about-stats">
                     <div class="stat-item">
                         <i class="fas fa-drafting-compass"></i>
@@ -98,7 +98,7 @@
                     </div>
                     <div class="stat-item">
                         <i class="fas fa-city"></i>
-                        <h4>40+</h4>
+                        <h4>20+</h4>
                         <p>Tỉnh Thành Đã Triển Khai Dự Án</p>
                     </div>
                 </div>
@@ -113,14 +113,14 @@
     <section class="content-section">
         <div class="container">
             <div class="section-header">
-                <h2>Về Dịch Vụ Thiết Kế Của Ruby Group</h2>
+                <h2>Về Dịch Vụ Thiết Kế Của Rby Group</h2>
                 <div class="divider"></div>
                 <p>Đối Tác Tin Cậy Cho Mọi Dự Án Thiết Kế</p>
             </div>
             <div class="content-grid">
                 <div class="content-card">
                     <h3><i class="fas fa-pencil-ruler"></i> Đội Ngũ Kiến Trúc Sư</h3>
-                    <p>Ruby Group sở hữu đội ngũ kiến trúc sư, nhà thiết kế nội thất giàu kinh nghiệm, có tầm nhìn thẩm mỹ hiện đại. Chúng tôi luôn cập nhật xu hướng thiết kế mới nhất trên thế giới.</p>
+                    <p>Rby Group sở hữu đội ngũ kiến trúc sư, nhà thiết kế nội thất giàu kinh nghiệm, có tầm nhìn thẩm mỹ hiện đại. Chúng tôi luôn cập nhật xu hướng thiết kế mới nhất trên thế giới.</p>
                     <ul>
                         <li><i class="fas fa-check"></i> Kiến trúc sư có bằng cấp chuyên môn</li>
                         <li><i class="fas fa-check"></i> 10+ năm kinh nghiệm thiết kế</li>
@@ -190,7 +190,7 @@
                 </div>
                 <div class="product-item">
                     <div class="product-image">
-                        <img src="https://images.pexels.com/photos/1090638/pexels-photo-1090638.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Thiết Kế Văn Phòng">
+                        <img src="./anh/backgroud4.png" alt="Thiết Kế Văn Phòng">
                     </div>
                     <div class="product-info">
                         <h3>Thiết Kế Văn Phòng</h3>
@@ -199,7 +199,7 @@
                 </div>
                 <div class="product-item">
                     <div class="product-image">
-                        <img src="https://images.pexels.com/photos/1090641/pexels-photo-1090641.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Thiết Kế Showroom">
+                        <img src="./anh/backgroud5.jpg" alt="Thiết Kế Showroom">
                     </div>
                     <div class="product-info">
                         <h3>Thiết Kế Showroom</h3>
@@ -208,7 +208,7 @@
                 </div>
                 <div class="product-item">
                     <div class="product-image">
-                        <img src="https://images.pexels.com/photos/262048/pexels-photo-262048.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Thiết Kế Nhà Hàng">
+                        <img src="./anh/backgroud6.jpg" alt="Thiết Kế Nhà Hàng">
                     </div>
                     <div class="product-info">
                         <h3>Thiết Kế Nhà Hàng - Cafe</h3>
@@ -226,7 +226,7 @@
                 </div>
                 <div class="product-item">
                     <div class="product-image">
-                        <img src="https://images.pexels.com/photos/1090638/pexels-photo-1090638.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Thiết Kế Spa">
+                        <img src="./anh/backgroud7.jpg " alt="Thiết Kế Spa">
                     </div>
                     <div class="product-info">
                         <h3>Thiết Kế Spa - Thẩm Mỹ</h3>
@@ -241,7 +241,7 @@
     <section class="content-section" style="background: var(--bg-light);">
         <div class="container">
             <div class="section-header">
-                <h2>Quy Trình Thiết Kế Tại Ruby Group</h2>
+                <h2>Quy Trình Thiết Kế Tại Rby Group</h2>
                 <div class="divider"></div>
                 <p>6 Bước Thực Hiện Chuyên Nghiệp</p>
             </div>
@@ -315,7 +315,7 @@
     <section class="content-section" style="background: var(--bg-light);">
         <div class="container">
             <div class="section-header">
-                <h2>Cam Kết Của Ruby Group</h2>
+                <h2>Cam Kết Của Rby Group</h2>
                 <div class="divider"></div>
                 <p>Chất Lượng - Tiến Độ - Giá Cả</p>
             </div>
@@ -340,40 +340,73 @@
         </div>
     </section>
 
-    <!-- Contact CTA -->
-    <section class="content-section" style="background: var(--white);">
+   <!-- Contact Section -->
+    <section class="contact" id="contact">
         <div class="container">
             <div class="section-header">
-                <h2>Nhận Tư Vấn Thiết Kế Miễn Phí</h2>
+                <h2>Liên Hệ Với Chúng Tôi</h2>
                 <div class="divider"></div>
-                <p>Hotline: 1900 xxxx - 0123 456 789</p>
-                <a href="index.html#contact" class="btn-primary" style="margin-top: 20px;">Liên Hệ Ngay</a>
+                <p>Hãy Để Rby Group Đồng Hành Cùng Bạn</p>
+            </div>
+            <div class="contact-wrapper">
+                <div class="contact-info">
+                    <div class="contact-item">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <div>
+                            <h4>Địa Chỉ</h4>
+                            <p>Thôn Kim Sơn, xã Đông Tiến, huyện Đông Sơn, tỉnh Thanh Hóa</p>
+                        </div>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-phone"></i>
+                        <div>
+                            <h4>Điện Thoại</h4>
+                            <p>0877.15.86.86 - 0946.565.893</p>
+                        </div>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-envelope"></i>
+                        <div>
+                            <h4>Email</h4>
+                            <p>Sonnanorby.rbygroup@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-clock"></i>
+                        <div>
+                            <h4>Giờ Làm Việc</h4>
+                            <p>Thứ 2 - Thứ 7: 8:00 - 18:00<br>Chủ Nhật: 8:00 - 12:00</p>
+                        </div>
+                    </div>
+                </div>
+                <img src="https://images.pexels.com/photos/1643383/pexels-photo-1643383.jpeg?auto=compress&cs=tinysrgb&w=1920&h=1080&fit=crop" class="lienhe" alt="">
             </div>
         </div>
     </section>
 
-     <!-- Footer -->
-<footer class="footer">
+
+ <!-- Footer -->
+ <footer class="footer">
     <div class="container">
       <div class="footer-content">
         
         <div class="footer-section">
-          <h3>Tập Đoàn Ruby Group</h3>
-          <p>Ruby Group – Tập đoàn đa lĩnh vực hàng đầu Việt Nam, chuyên cung cấp sơn cao cấp, dịch vụ tư vấn – thiết kế nội ngoại thất và hệ thống thẩm mỹ viện công nghệ cao.</p>
+          <h3>Tập Đoàn Rby Group</h3>
+          <p>Rby Group – Tập đoàn đa lĩnh vực hàng đầu Việt Nam, chuyên cung cấp sơn cao cấp, dịch vụ tư vấn – thiết kế nội ngoại thất và hệ thống thẩm mỹ viện công nghệ cao.</p>
           <div class="social-links">
             <a href="https://www.facebook.com/profile.php?id=100063476167758"><i class="fab fa-facebook"></i></a>
             <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
             <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
-            <a href="https://zalo.me/0815023789"><i class="fas fa-comment-dots"></i></a>
+            <a href="https://zalo.me/0977912846"><i class="fas fa-comment-dots"></i></a>
           </div>
         </div>
   
         <div class="footer-section">
           <h3>Liên Hệ</h3>
           <div class="contact-info">
-            <p><i class="fas fa-map-marker-alt"></i> Trụ sở chính: Số 68 Nguyễn Trãi, Quận Thanh Xuân, Hà Nội, Việt Nam</p>
-            <p><i class="fas fa-phone"></i> <a href="tel:0815023789">0815.023.789</a></p>
-            <p><i class="fas fa-envelope"></i> tapdoanrubygroup@gmail.com</p>
+            <p><i class="fas fa-map-marker-alt"></i> Trụ sở chính: Thôn Kim Sơn, xã Đông Tiến, huyện Đông Sơn, tỉnh Thanh Hóa</p>
+            <p><i class="fas fa-phone"></i> <a href="tel:0977912846">0877.15.86.86 - 0946.565.893</a></p>
+            <p><i class="fas fa-envelope"></i> Sonnanorby.rbygroup@gmail.com</p>
             <p><i class="fas fa-clock"></i> 8:00 - 20:00 (Thứ 2 - Chủ nhật)</p>
           </div>
         </div>
@@ -381,11 +414,11 @@
         <div class="footer-section">
           <h3>Dịch Vụ Chính</h3>
           <ul>
-            <li><a href="son.html">Phân Phối Sơn Ruby Premium</a></li>
-            <li><a href="tu-van.html">Tư Vấn & Thiết Kế Nội Thất</a></li>
-            <li><a href="tham-my.html">Thẩm Mỹ Viện Ruby Group</a></li>
-            <li><a href="dao-tao.html">Đào Tạo & Hợp Tác Đại Lý</a></li>
-            <li><a href="lien-he.html">Hỗ Trợ Khách Hàng</a></li>
+            <li><a href="son.html">Phân Phối Sơn Rby Premium</a></li>
+            <li><a href="thiet-ke.html">Tư Vấn & Thiết Kế Nội Thất</a></li>
+            <li><a href="tham-my.html">Thẩm Mỹ Viện Rby Group</a></li>
+            <li><a href="contact.html">Đào Tạo & Hợp Tác Đại Lý</a></li>
+            <li><a href="contact.html">Hỗ Trợ Khách Hàng</a></li>
           </ul>
         </div>
   
@@ -406,16 +439,17 @@
             <li><a href="contact.html">Chi Nhánh Hà Nội</a></li>
             <li><a href="contact.html">Chi Nhánh TP. Hồ Chí Minh</a></li>
             <li><a href="contact.html">Chi Nhánh Thanh Hóa</a></li>
-            <li><a href="contact.html">Chi Nhánh Nghệ An</a></li>
+            
           </ul>
         </div>
       </div>
   
       <div class="footer-bottom">
-        <p>&copy; 2025 Tập Đoàn Ruby Group. Tất cả quyền được bảo lưu.</p>
+        <p>&copy; 2025 Tập Đoàn Rby Group. Tất cả quyền được bảo lưu.</p>
       </div>
     </div>
   </footer>
+  
     <script src="main.js"></script>
 </body>
 </html>
