--- a/tham-my.html
+++ b/tham-my.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Thẩm Mỹ Viện Ruby - Hệ thống thẩm mỹ viện 5 sao với công nghệ hiện đại. Chăm sóc da, điều trị thẩm mỹ, spa cao cấp. Đội ngũ bác sĩ chuyên nghiệp.">
+    <meta name="description" content="Thẩm Mỹ Viện Rby - Hệ thống thẩm mỹ viện 5 sao với công nghệ hiện đại. Chăm sóc da, điều trị thẩm mỹ, spa cao cấp. Đội ngũ bác sĩ chuyên nghiệp.">
     <meta name="keywords" content="thẩm mỹ viện, chăm sóc da, điều trị mụn, trẻ hóa da, spa, Ruby Group">
     <title>Thẩm Mỹ Viện Ruby | Ruby Group</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -16,15 +16,15 @@
             <div class="container">
                 <div class="nav-wrapper">
                     <div class="logo">
-                        <a href="index.html">
+                        <a href="\">
                             <i class="fas fa-gem"></i>
-                            <span>RUBY GROUP</span>
+                            <span>RBY GROUP</span>
                         </a>
                     </div>
                     <ul class="nav-menu" id="navMenu">
-                        <li><a href="index.html">Trang Chủ</a></li>
-                        <li><a href="son.html">Bán Sơn</a></li>
-                        <li><a href="tham-my.html" class="active">Thẩm Mỹ Viện</a></li>
+                        <li><a href="\" class="active">Trang Chủ</a></li>
+                        <li><a href="son.html">Sơn Nhà </a></li>
+                        <li><a href="tham-my.html">Thẩm Mỹ Viện</a></li>
                         <li><a href="thiet-ke.html">Tư Vấn Thiết Kế</a></li>
                         <li><a href="contact.html">Liên Hệ</a></li>
                     </ul>
@@ -37,13 +37,12 @@
             </div>
         </nav>
     </header>
-
     <!-- Hero Slider -->
     <section class="hero-slider">
         <div class="slider-container">
             <div class="slide active" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.pexels.com/photos/1643383/pexels-photo-1643383.jpeg?auto=compress&cs=tinysrgb&w=1920&h=1080&fit=crop') center/cover;">
                 <div class="slide-content">
-                    <h2>Chào Mừng Đến Với Ruby Group</h2>
+                    <h2>Chào Mừng Đến Với Rby Group</h2>
                     <p>Đối Tác Tin Cậy Cho Mọi Nhu Cầu Của Bạn</p>
                     <a href="contact.html" class="btn-primary">Khám Phá Ngay</a>
                 </div>
@@ -51,7 +50,7 @@
             <div class="slide" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.pexels.com/photos/1090638/pexels-photo-1090638.jpeg?auto=compress&cs=tinysrgb&w=1920') center/cover;">
                 <div class="slide-content">
                     <h2>Chất Lượng Là Ưu Tiên Hàng Đầu</h2>
-                    <p>20+ Năm Kinh Nghiệm Trong Ngành</p>
+                    <p>10+ Năm Kinh Nghiệm Trong Ngành</p>
                     <a href="contact.html" class="btn-primary">Tìm Hiểu Thêm</a>
                 </div>
             </div>
@@ -73,33 +72,33 @@
 <section class="about" id="about">
     <div class="container">
         <div class="section-header">
-            <h2>Về Thẩm Mỹ Viện Ruby Group</h2>
+            <h2>Về Thẩm Mỹ Viện Rby Group</h2>
             <div class="divider"></div>
-            <p>Hành Trình Nâng Tầm Vẻ Đẹp Việt Cùng Ruby Group</p>
+            <p>Hành Trình Nâng Tầm Vẻ Đẹp Việt Cùng Rby Group</p>
         </div>
         <div class="about-content">
             <div class="about-image">
-                <img src="https://images.pexels.com/photos/853427/pexels-photo-853427.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Thẩm Mỹ Viện Ruby Group">
+                <img src="./anh/backgroud3.png" alt="Thẩm Mỹ Viện Ruby Group">
             </div>
             <div class="about-text">
                 <h3>Hệ Thống Thẩm Mỹ Cao Cấp Hàng Đầu Việt Nam</h3>
-                <p>Thẩm Mỹ Viện <strong>Ruby Group</strong> là thương hiệu làm đẹp uy tín trực thuộc tập đoàn Ruby Group, hoạt động với sứ mệnh “Tôn vinh vẻ đẹp tự nhiên – Nâng tầm phong thái Việt”. Với hơn 20 năm kinh nghiệm trong lĩnh vực làm đẹp, Ruby Group đã và đang dẫn đầu xu hướng thẩm mỹ hiện đại, ứng dụng công nghệ tiên tiến hàng đầu thế giới.</p>
+                <p>Thẩm Mỹ Viện <strong>Rby Group</strong> là thương hiệu làm đẹp uy tín trực thuộc tập đoàn Rby Group, hoạt động với sứ mệnh “Tôn vinh vẻ đẹp tự nhiên – Nâng tầm phong thái Việt”. Với hơn 10 năm kinh nghiệm trong lĩnh vực làm đẹp, Rby Group đã và đang dẫn đầu xu hướng thẩm mỹ hiện đại, ứng dụng công nghệ tiên tiến hàng đầu thế giới.</p>
                 <p>Chúng tôi chuyên cung cấp các dịch vụ: <strong>chăm sóc da chuyên sâu, trẻ hóa làn da, phun xăm thẩm mỹ, giảm béo công nghệ cao, thẩm mỹ không phẫu thuật</strong>… mang đến sự tự tin và vẻ đẹp hoàn hảo cho hàng chục nghìn khách hàng trên toàn quốc.</p>
-                <p>Đội ngũ chuyên gia, bác sĩ giàu kinh nghiệm cùng hệ thống trang thiết bị đạt chuẩn quốc tế giúp Ruby Group luôn khẳng định vị thế thương hiệu thẩm mỹ uy tín, chất lượng và đẳng cấp.</p>
+                <p>Đội ngũ chuyên gia, bác sĩ giàu kinh nghiệm cùng hệ thống trang thiết bị đạt chuẩn quốc tế giúp Rby Group luôn khẳng định vị thế thương hiệu thẩm mỹ uy tín, chất lượng và đẳng cấp.</p>
                 <div class="about-stats">
                     <div class="stat-item">
                         <i class="fas fa-spa"></i>
-                        <h4>20+</h4>
+                        <h4>10+</h4>
                         <p>Năm Kinh Nghiệm Làm Đẹp</p>
                     </div>
                     <div class="stat-item">
                         <i class="fas fa-heart"></i>
-                        <h4>100,000+</h4>
+                        <h4>10,000+</h4>
                         <p>Khách Hàng Hài Lòng</p>
                     </div>
                     <div class="stat-item">
                         <i class="fas fa-clinic-medical"></i>
-                        <h4>30+</h4>
+                        <h4>20+</h4>
                         <p>Cơ Sở Thẩm Mỹ Toàn Quốc</p>
                     </div>
                 </div>
@@ -114,7 +113,7 @@
     <section class="content-section">
         <div class="container">
             <div class="section-header">
-                <h2>Về Thẩm Mỹ Viện Ruby</h2>
+                <h2>Về Thẩm Mỹ Viện Rby</h2>
                 <div class="divider"></div>
                 <p>Hệ Thống Thẩm Mỹ Viện Đẳng Cấp 5 Sao</p>
             </div>
@@ -133,7 +132,7 @@
                 </div>
                 <div class="content-card">
                     <h3><i class="fas fa-user-md"></i> Đội Ngũ Chuyên Gia</h3>
-                    <p>Đội ngũ bác sĩ, chuyên viên thẩm mỹ tại Ruby đều được đào tạo chuyên sâu, có bằng cấp chứng chỉ hành nghề, giàu kinh nghiệm và tay nghề cao trong lĩnh vực thẩm mỹ da liễu.</p>
+                    <p>Đội ngũ bác sĩ, chuyên viên thẩm mỹ tại Rby đều được đào tạo chuyên sâu, có bằng cấp chứng chỉ hành nghề, giàu kinh nghiệm và tay nghề cao trong lĩnh vực thẩm mỹ da liễu.</p>
                     <ul>
                         <li><i class="fas fa-check"></i> Bác sĩ da liễu có chứng chỉ hành nghề</li>
                         <li><i class="fas fa-check"></i> Chuyên viên thẩm mỹ giàu kinh nghiệm</li>
@@ -145,7 +144,7 @@
                 </div>
                 <div class="content-card">
                     <h3><i class="fas fa-microscope"></i> Quy Trình Chuẩn Y Khoa</h3>
-                    <p>Mọi liệu trình điều trị tại Ruby đều tuân thủ nghiêm ngặt quy trình chuẩn y khoa, đảm bảo an toàn tuyệt đối cho khách hàng với các bước kiểm tra và theo dõi sát sao.</p>
+                    <p>Mọi liệu trình điều trị tại Rby đều tuân thủ nghiêm ngặt quy trình chuẩn y khoa, đảm bảo an toàn tuyệt đối cho khách hàng với các bước kiểm tra và theo dõi sát sao.</p>
                     <ul>
                         <li><i class="fas fa-check"></i> Khám và phân tích da chi tiết</li>
                         <li><i class="fas fa-check"></i> Tư vấn phương pháp phù hợp</li>
@@ -279,7 +278,7 @@
     <section class="content-section" style="background: var(--white);">
         <div class="container">
             <div class="section-header">
-                <h2>Cam Kết Của Thẩm Mỹ Viện Ruby</h2>
+                <h2>Cam Kết Của Thẩm Mỹ Viện Rby</h2>
                 <div class="divider"></div>
                 <p>An Toàn - Hiệu Quả - Uy Tín</p>
             </div>
@@ -304,14 +303,47 @@
         </div>
     </section>
 
-    <!-- Contact CTA -->
-    <section class="content-section" style="background: var(--bg-light);">
+ 
+    <!-- Contact Section -->
+    <section class="contact" id="contact">
         <div class="container">
             <div class="section-header">
-                <h2>Đặt Lịch Tư Vấn Miễn Phí</h2>
+                <h2>Liên Hệ Với Chúng Tôi</h2>
                 <div class="divider"></div>
-                <p>Hotline: 1900 xxxx - 0123 456 789</p>
-                <a href="index.html#contact" class="btn-primary" style="margin-top: 20px;">Đặt Lịch Ngay</a>
+                <p>Hãy Để Rby Group Đồng Hành Cùng Bạn</p>
+            </div>
+            <div class="contact-wrapper">
+                <div class="contact-info">
+                    <div class="contact-item">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <div>
+                            <h4>Địa Chỉ</h4>
+                            <p>Thôn Kim Sơn, xã Đông Tiến, huyện Đông Sơn, tỉnh Thanh Hóa</p>
+                        </div>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-phone"></i>
+                        <div>
+                            <h4>Điện Thoại</h4>
+                            <p>0877.15.86.86 - 0946.565.893</p>
+                        </div>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-envelope"></i>
+                        <div>
+                            <h4>Email</h4>
+                            <p>Sonnanorby.rbygroup@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-clock"></i>
+                        <div>
+                            <h4>Giờ Làm Việc</h4>
+                            <p>Thứ 2 - Thứ 7: 8:00 - 18:00<br>Chủ Nhật: 8:00 - 12:00</p>
+                        </div>
+                    </div>
+                </div>
+                <img src="./anh/backgroud2.jpg" class="lienhe" alt="">
             </div>
         </div>
     </section>
@@ -322,22 +354,22 @@
       <div class="footer-content">
         
         <div class="footer-section">
-          <h3>Tập Đoàn Ruby Group</h3>
-          <p>Ruby Group – Tập đoàn đa lĩnh vực hàng đầu Việt Nam, chuyên cung cấp sơn cao cấp, dịch vụ tư vấn – thiết kế nội ngoại thất và hệ thống thẩm mỹ viện công nghệ cao.</p>
+          <h3>Tập Đoàn Rby Group</h3>
+          <p>Rby Group – Tập đoàn đa lĩnh vực hàng đầu Việt Nam, chuyên cung cấp sơn cao cấp, dịch vụ tư vấn – thiết kế nội ngoại thất và hệ thống thẩm mỹ viện công nghệ cao.</p>
           <div class="social-links">
             <a href="https://www.facebook.com/profile.php?id=100063476167758"><i class="fab fa-facebook"></i></a>
             <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
             <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
-            <a href="https://zalo.me/0815023789"><i class="fas fa-comment-dots"></i></a>
+            <a href="https://zalo.me/0977912846"><i class="fas fa-comment-dots"></i></a>
           </div>
         </div>
   
         <div class="footer-section">
           <h3>Liên Hệ</h3>
           <div class="contact-info">
-            <p><i class="fas fa-map-marker-alt"></i> Trụ sở chính: Số 68 Nguyễn Trãi, Quận Thanh Xuân, Hà Nội, Việt Nam</p>
-            <p><i class="fas fa-phone"></i> <a href="tel:0815023789">0815.023.789</a></p>
-            <p><i class="fas fa-envelope"></i> tapdoanrubygroup@gmail.com</p>
+            <p><i class="fas fa-map-marker-alt"></i> Trụ sở chính: Thôn Kim Sơn, xã Đông Tiến, huyện Đông Sơn, tỉnh Thanh Hóa</p>
+            <p><i class="fas fa-phone"></i> <a href="tel:0977912846">0877.15.86.86 - 0946.565.893</a></p>
+            <p><i class="fas fa-envelope"></i> Sonnanorby.rbygroup@gmail.com</p>
             <p><i class="fas fa-clock"></i> 8:00 - 20:00 (Thứ 2 - Chủ nhật)</p>
           </div>
         </div>
@@ -345,11 +377,11 @@
         <div class="footer-section">
           <h3>Dịch Vụ Chính</h3>
           <ul>
-            <li><a href="son.html">Phân Phối Sơn Ruby Premium</a></li>
-            <li><a href="tu-van.html">Tư Vấn & Thiết Kế Nội Thất</a></li>
-            <li><a href="tham-my.html">Thẩm Mỹ Viện Ruby Group</a></li>
-            <li><a href="dao-tao.html">Đào Tạo & Hợp Tác Đại Lý</a></li>
-            <li><a href="lien-he.html">Hỗ Trợ Khách Hàng</a></li>
+            <li><a href="son.html">Phân Phối Sơn Rby Premium</a></li>
+            <li><a href="thiet-ke.html">Tư Vấn & Thiết Kế Nội Thất</a></li>
+            <li><a href="tham-my.html">Thẩm Mỹ Viện Rby Group</a></li>
+            <li><a href="contact.html">Đào Tạo & Hợp Tác Đại Lý</a></li>
+            <li><a href="contact.html">Hỗ Trợ Khách Hàng</a></li>
           </ul>
         </div>
   
@@ -370,16 +402,17 @@
             <li><a href="contact.html">Chi Nhánh Hà Nội</a></li>
             <li><a href="contact.html">Chi Nhánh TP. Hồ Chí Minh</a></li>
             <li><a href="contact.html">Chi Nhánh Thanh Hóa</a></li>
-            <li><a href="contact.html">Chi Nhánh Nghệ An</a></li>
+            
           </ul>
         </div>
       </div>
   
       <div class="footer-bottom">
-        <p>&copy; 2025 Tập Đoàn Ruby Group. Tất cả quyền được bảo lưu.</p>
+        <p>&copy; 2025 Tập Đoàn Rby Group. Tất cả quyền được bảo lưu.</p>
       </div>
     </div>
   </footer>
+  
     <script src="main.js"></script>
 </body>
 </html>
