--- a/tham-my.html
+++ b/tham-my.html
@@ -343,7 +343,7 @@
                         </div>
                     </div>
                 </div>
-                <img src="./anh/backgroud2.jpg" class="imgab" alt="">
+                <img src="./anh/backgroud2.jpg" style=" width: 100%;" alt="">
             </div>
         </div>
     </section>
