--- a/thiet-ke.html
+++ b/thiet-ke.html
@@ -379,7 +379,7 @@
                         </div>
                     </div>
                 </div>
-                <img src="https://images.pexels.com/photos/1643383/pexels-photo-1643383.jpeg?auto=compress&cs=tinysrgb&w=1920&h=1080&fit=crop" class="imgab" alt="">
+                <img src="https://images.pexels.com/photos/1643383/pexels-photo-1643383.jpeg?auto=compress&cs=tinysrgb&w=1920&h=1080&fit=crop" style=" width: 100%;" alt="">
             </div>
         </div>
     </section>
