--- a/contact.html
+++ b/contact.html
@@ -759,8 +759,8 @@ section {
     </style>
 </head>
 <body>
-   <!-- Header & Navigation -->
-   <header class="header">
+  <!-- Header & Navigation -->
+  <header class="header">
     <nav class="navbar">
         <div class="container">
             <div class="nav-wrapper">
@@ -771,11 +771,11 @@ section {
                     </a>
                 </div>
                 <ul class="nav-menu" id="navMenu">
-                    <li><a href="\" >Trang Chủ</a></li>
+                    <li><a href="index.html" class="active">Trang Chủ</a></li>
                     <li><a href="son.html">Sơn Nhà </a></li>
                     <li><a href="tham-my.html">Thẩm Mỹ Viện</a></li>
                     <li><a href="thiet-ke.html">Tư Vấn Thiết Kế</a></li>
-                    <li><a href="contact.html" class="active">Liên Hệ</a></li>
+                    <li><a href="contact.html">Liên Hệ</a></li>
                 </ul>
                 <div class="hamburger" id="hamburger">
                     <span></span>
@@ -786,6 +786,7 @@ section {
         </div>
     </nav>
 </header>
+
 <!-- Page Header -->
 <section class="page-header">
     <div class="container">
