--- a/son.html
+++ b/son.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <!-- Header & Navigation -->
-   <header class="header">
+  <!-- Header & Navigation -->
+  <header class="header">
     <nav class="navbar">
         <div class="container">
             <div class="nav-wrapper">
@@ -22,7 +22,7 @@
                     </a>
                 </div>
                 <ul class="nav-menu" id="navMenu">
-                    <li><a href="\" class="active">Trang Chủ</a></li>
+                    <li><a href="index.html" class="active">Trang Chủ</a></li>
                     <li><a href="son.html">Sơn Nhà </a></li>
                     <li><a href="tham-my.html">Thẩm Mỹ Viện</a></li>
                     <li><a href="thiet-ke.html">Tư Vấn Thiết Kế</a></li>
@@ -37,7 +37,7 @@
         </div>
     </nav>
 </header>
-    
+
  <!-- Hero Slider -->
  <section class="hero-slider">
     <div class="slider-container">
