--- a/thiet-ke.html
+++ b/thiet-ke.html
@@ -10,33 +10,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Header & Navigation -->
-    <header class="header">
-        <nav class="navbar">
-            <div class="container">
-                <div class="nav-wrapper">
-                    <div class="logo">
-                        <a href="\">
-                            <i class="fas fa-gem"></i>
-                            <span>RBY GROUP</span>
-                        </a>
-                    </div>
-                    <ul class="nav-menu" id="navMenu">
-                        <li><a href="\" class="active">Trang Chủ</a></li>
-                        <li><a href="son.html">Sơn Nhà </a></li>
-                        <li><a href="tham-my.html">Thẩm Mỹ Viện</a></li>
-                        <li><a href="thiet-ke.html">Tư Vấn Thiết Kế</a></li>
-                        <li><a href="contact.html">Liên Hệ</a></li>
-                    </ul>
-                    <div class="hamburger" id="hamburger">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
+   <!-- Header & Navigation -->
+   <header class="header">
+    <nav class="navbar">
+        <div class="container">
+            <div class="nav-wrapper">
+                <div class="logo">
+                    <a href="\">
+                        <i class="fas fa-gem"></i>
+                        <span>RBY GROUP</span>
+                    </a>
+                </div>
+                <ul class="nav-menu" id="navMenu">
+                    <li><a href="index.html" class="active">Trang Chủ</a></li>
+                    <li><a href="son.html">Sơn Nhà </a></li>
+                    <li><a href="tham-my.html">Thẩm Mỹ Viện</a></li>
+                    <li><a href="thiet-ke.html">Tư Vấn Thiết Kế</a></li>
+                    <li><a href="contact.html">Liên Hệ</a></li>
+                </ul>
+                <div class="hamburger" id="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </div>
             </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
+</header>
+
 
      <!-- Hero Slider -->
      <section class="hero-slider">
