--- a/thiet-ke.html
+++ b/thiet-ke.html
@@ -25,7 +25,7 @@
                     <li><a href="index.html" class="active">Trang Chủ</a></li>
                     <li><a href="son.html">Sơn Nhà </a></li>
                     <li><a href="tham-my.html">Thẩm Mỹ Viện</a></li>
-                    <li><a href="thiet-ke.html">Tư Vấn Thiết Kế</a></li>
+                    <li><a href="thiet-ke.html" class="active">Tư Vấn Thiết Kế</a></li>
                     <li><a href="contact.html">Liên Hệ</a></li>
                 </ul>
                 <div class="hamburger" id="hamburger">
