--- a/son.html
+++ b/son.html
@@ -22,8 +22,8 @@
                     </a>
                 </div>
                 <ul class="nav-menu" id="navMenu">
-                    <li><a href="index.html" class="active">Trang Chủ</a></li>
-                    <li><a href="son.html">Sơn Nhà </a></li>
+                    <li><a href="index.html" >Trang Chủ</a></li>
+                    <li><a href="son.html" class="active">Sơn Nhà </a></li>
                     <li><a href="tham-my.html">Thẩm Mỹ Viện</a></li>
                     <li><a href="thiet-ke.html">Tư Vấn Thiết Kế</a></li>
                     <li><a href="contact.html">Liên Hệ</a></li>
