--- a/tham-my.html
+++ b/tham-my.html
@@ -22,9 +22,9 @@
                         </a>
                     </div>
                     <ul class="nav-menu" id="navMenu">
-                        <li><a href="index.html" class="active">Trang Chủ</a></li>
+                        <li><a href="index.html" >Trang Chủ</a></li>
                         <li><a href="son.html">Sơn Nhà </a></li>
-                        <li><a href="tham-my.html">Thẩm Mỹ Viện</a></li>
+                        <li><a href="tham-my.html" class="active">Thẩm Mỹ Viện</a></li>
                         <li><a href="thiet-ke.html">Tư Vấn Thiết Kế</a></li>
                         <li><a href="contact.html">Liên Hệ</a></li>
                     </ul>
