--- a/tham-my.html
+++ b/tham-my.html
@@ -8,6 +8,8 @@
     <title>Thẩm Mỹ Viện Ruby | Ruby Group</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="./anh/logorby.png">
+    <link rel="apple-touch-icon" href="./anh/logorby.png">
 </head>
 <body>
     <!-- Header & Navigation -->
@@ -17,15 +19,16 @@
                 <div class="nav-wrapper">
                     <div class="logo">
                         <a href="\">
-                            <i class="fas fa-gem"></i>
+                            <img src="./anh/logorby.png" alt="">
                             <span>RBY GROUP</span>
                         </a>
                     </div>
                     <ul class="nav-menu" id="navMenu">
                         <li><a href="index.html" >Trang Chủ</a></li>
-                        <li><a href="son.html">Sơn Nhà </a></li>
+                        <li><a href="son.html">Sản Xuất Sơn   </a></li>
                         <li><a href="tham-my.html" class="active">Thẩm Mỹ Viện</a></li>
                         <li><a href="thiet-ke.html">Tư Vấn Thiết Kế</a></li>
+                        <li><a href="thuong-hieu-rieng.html" >Mở Thương Hiệu Riêng</a></li>
                         <li><a href="contact.html">Liên Hệ</a></li>
                     </ul>
                     <div class="hamburger" id="hamburger">
@@ -41,27 +44,29 @@
     <!-- Hero Slider -->
     <section class="hero-slider">
         <div class="slider-container">
-            <div class="slide active" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.pexels.com/photos/1643383/pexels-photo-1643383.jpeg?auto=compress&cs=tinysrgb&w=1920&h=1080&fit=crop') center/cover;">
+            <div class="slide active" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('./anh/backgroud10.png') center/cover;">
                 <div class="slide-content">
-                    <h2>Chào Mừng Đến Với Rby Group</h2>
-                    <p>Đối Tác Tin Cậy Cho Mọi Nhu Cầu Của Bạn</p>
-                    <a href="contact.html" class="btn-primary">Khám Phá Ngay</a>
-                </div>
-            </div>
-            <div class="slide" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.pexels.com/photos/1090638/pexels-photo-1090638.jpeg?auto=compress&cs=tinysrgb&w=1920') center/cover;">
-                <div class="slide-content">
-                    <h2>Chất Lượng Là Ưu Tiên Hàng Đầu</h2>
+                    <h2>Sắc Đẹp Tạo Nên Điểm Nhấn Của tôi</h2>
                     <p>10+ Năm Kinh Nghiệm Trong Ngành</p>
                     <a href="contact.html" class="btn-primary">Tìm Hiểu Thêm</a>
                 </div>
             </div>
-            <div class="slide" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.pexels.com/photos/1571460/pexels-photo-1571460.jpeg?auto=compress&cs=tinysrgb&w=1920') center/cover;">
+            <div class="slide" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('./anh/backgroud11.jpg') center/cover;">
                 <div class="slide-content">
                     <h2>Dịch Vụ Đa Dạng Chuyên Nghiệp</h2>
                     <p>Giải Pháp Toàn Diện Cho Mọi Khách Hàng</p>
                     <a href="contact.html" class="btn-primary">Xem Dịch Vụ</a>
                 </div>
             </div>
+            <div class="slide " style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('./anh/backgroud10.png') center/cover;">
+                <div class="slide-content">
+                    <h2>Chào Mừng Đến Với RBY Group</h2>
+                    <p>Đối Tác Tin Cậy Cho Mọi Nhu Cầu Của Bạn</p>
+                    <a href="contact.html" class="btn-primary">Khám Phá Ngay</a>
+                </div>
+            </div>
+           
+           
         </div>
         <button class="slider-btn prev" id="prevBtn"><i class="fas fa-chevron-left"></i></button>
         <button class="slider-btn next" id="nextBtn"><i class="fas fa-chevron-right"></i></button>
@@ -358,7 +363,7 @@
           <h3>Tập Đoàn Rby Group</h3>
           <p>Rby Group – Tập đoàn đa lĩnh vực hàng đầu Việt Nam, chuyên cung cấp sơn cao cấp, dịch vụ tư vấn – thiết kế nội ngoại thất và hệ thống thẩm mỹ viện công nghệ cao.</p>
           <div class="social-links">
-            <a href="https://www.facebook.com/profile.php?id=100063476167758"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.facebook.com/rby.sonnano/"><i class="fab fa-facebook"></i></a>
             <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
             <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
             <a href="https://zalo.me/0977912846"><i class="fas fa-comment-dots"></i></a>
