Cập nhật giao diện và thêm ảnh xưởng

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                         <img src="https://images.pexels.com/photos/106399/pexels-photo-106399.jpeg?auto=compress&cs=tinysrgb&w=1200" alt="Nhà 1 Tầng Mái Nhật">
                     </div>
                     <div class="project-details">
-                        <h3>Nhà 1 Tầng Mái Nhật</h3>
+                        <h3>Nhà 1 Tầng Mái Thái</h3>
                         <div class="project-meta">
                             <div class="project-meta-item">
                                 <i class="fas fa-user"></i>
@@ -356,7 +356,7 @@
                             </div>
                         </div>
                         <div class="project-feedback">
-                            <p>"Mẫu nhà mái Nhật rất đẹp và phù hợp với gia đình tôi. RBY Group đã tư vấn chi tiết về vật liệu, màu sơn và bố trí nội thất hợp lý. Giá cả hợp lý, chất lượng tuyệt vời!"</p>
+                            <p>"Mẫu nhà mái Thái rất đẹp và phù hợp với gia đình tôi. RBY Group đã tư vấn chi tiết về vật liệu, màu sơn và bố trí nội thất hợp lý. Giá cả hợp lý, chất lượng tuyệt vời!"</p>
                             <div class="project-feedback-author">- Anh Tuấn, Thanh Hóa</div>
                         </div>
                     </div>
@@ -364,7 +364,7 @@
                 <!-- Dự án 3 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="./anh/mau5.jpg" alt="Nhà 1 Tầng Mái Nhật">
+                        <img src="./anh/mau5.jpg" alt="Nhà 1 Tầng Mái Thái">
                     </div>
                     <div class="project-details">
                         <h3>Nhà 2 tầng Sang Trọng</h3>
