--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <a href="contact.html" class="btn-primary">Khám Phá Ngay</a>
                 </div>
             </div>
-            <div class="slide" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('./anh/Tuvan.png') center/cover;">
+            <div class="slide" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('./anh/tuvan4.png') center/cover;">
                 <div class="slide-content">
                     <h2>Chất Lượng Là Ưu Tiên Hàng Đầu</h2>
                     <p>10+ Năm Kinh Nghiệm Trong Ngành</p>
