--- a/thuong-hieu-rieng.html
+++ b/thuong-hieu-rieng.html
@@ -44,7 +44,7 @@
     <!-- Page Header -->
     <section class="page-header">
         <div class="container">
-            <h1>Dịch Vụ Mở Thương Hiệu Sơn Riêng</h1>
+            <h1>Mở Thương Hiệu Sơn - Chứng Chỉ - Đăng Ký Thương Hiệu </h1>
             <p>Tạo Dựng Thương Hiệu Sơn Riêng - Chúng Tôi Sản Xuất, Bạn Kinh Doanh</p>
             <div class="breadcrumb">
                 <a href="index.html">Trang Chủ</a>
